tests/errors/str_minus.ptt
use std/string

spark {
  x is "hello" - "world"
}
